# fovet

./: .gitattributes  .gitignore  ARDENT_SPEC_v2.md  CLAUDE.md  Makefile  README.md  dev.ps1  docker-compose.test.yml  docker-compose.yml  flash.bat  start.bat
automl-pipeline/: .gitignore  README.md  pyproject.toml
automl-pipeline/configs/: benchmark_4detectors.yaml  client_vibration.yaml  demo_autoencoder.yaml  demo_drift.yaml  demo_lstm_autoencoder.yaml  demo_mad.yaml  demo_zscore.yaml  kaggle_machine_temp.yaml  skab_pump_vibration.yaml
automl-pipeline/models/demo_zscore/: fovet_zscore_config.h
automl-pipeline/src/forge/: __init__.py  benchmark.py  cli.py  config.py  convert.py  deploy.py  evaluation.py  manifest.py  pipeline.py  preprocessing.py  report.py  scaffolding.py
automl-pipeline/src/forge/data/: __init__.py  base.py  csv_loader.py  loader.py  mqtt_loader.py  synthetic.py
automl-pipeline/src/forge/datasets/: __init__.py  download_human_datasets.py
automl-pipeline/src/forge/detectors/: __init__.py  autoencoder.py  base.py  ewma_drift.py  isolation_forest.py  lstm_autoencoder.py  mad.py  registry.py  zscore.py
automl-pipeline/tests/: test_autoencoder.py  test_benchmark.py  test_benchmark_cmd.py  test_config.py  test_data.py  test_detectors.py  test_download_human_datasets.py  test_evaluation.py  test_ewma_drift.py  test_fall_detection.py  test_fatigue_hrv.py  test_isolation_forest.py  test_lstm_autoencoder.py  test_mad_detector.py  test_mqtt_loader.py  test_pipeline.py  test_preprocessing.py  test_thermal_stress.py
docs/: architecture.md  (+6 more)
(+174 files in other folders)
