[project]
name = "fovet-forge"
version = "0.1.0"
description = "Fovet Forge — AutoML pipeline for anomaly detection on embedded targets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "numpy>=2.0",
    "rich>=13.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
]

[project.scripts]
forge = "forge.cli:app"

[project.optional-dependencies]
# Install ML extras for AutoEncoder support: uv sync --extra ml
ml = [
    "tensorflow>=2.17",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
